0.12
 - Update Module::Install to 1.16 version.

0.11 2015-04-06T23:22:54+02:00
 - Add get_line_by_id() and get_line_by_name() methods to doc.
 - Add new stations to line A.
 - Rewrite SEE ALSO section to new style.

0.10 2015-03-15T23:22:25+01:00
 - Add Map::Tube::Text::Shortest to SEE ALSO section in doc.
 - Add test comment.
 - Rewrite to new 'other_link' attribute in Map::Tube 2.89.

0.09 2015-03-11T07:55:05+01:00
 - Fix test dependency (Test::Map::Tube).
 - Rewrite junctions in XML file to line stations with multiple names.

0.08 2015-03-10T07:41:45+01:00
 - Add Map::Tube::Plugin::FuzzyFind, Map::Tube::Glasgow,
   Map::Tube::KoelnBonn, Map::Tube::Lyon and Map::Tube::Singapore to SEE
   ALSO section in doc.
 - Add test of map validity.
 - Remove obsolete code from EXAMPLE2 section in doc.
 - Update README file.

0.07 2015-01-25T01:21:51+01:00
 - Add <?xml> header to XML document.
 - Add lines to XML document.
 - Add Map::Tube::Budapest to SEE ALSO section in doc.
 - Add Map::Tube::Graph to SEE ALSO section in doc.
 - Add Map::Tube::Nanjing to SEE ALSO section in doc.
 - Add Map::Tube::Plugin::Graph to SEE ALSO section in doc.
 - Add Map::Tube::Vienna to SEE ALSO section in doc.
 - Add Task::Map::Tube to SEE ALSO section in doc.
 - Add get_lines() method to doc.
 - Add get_stations() method to doc.
 - Improve EXAMPLE3 section in doc.
 - Rename images/Prague.png to images/ex3.png.
 - Update copyright years to 2015.

0.06 2014-12-22T01:16:24+01:00
 - Fix examples/ex3.pl example.
 - Move image in doc to github. MetaCPAN doesn't view local images.

0.05 2014-12-21T17:35:53+01:00
 - Add EXAMPLE3 section to doc.
 - Add Map::Tube::Dnipropetrovsk, Map::Tube::Novosibirsk,
   Map::Tube::SaintPetersburg, Map::Tube::Tbilisi and
   Map::Tube::Yekaterinburg to SEE ALSO section in doc.
 - Add Map::Tube::GraphViz and Map::Tube::Text::Table to SEE ALSO section
   in doc.
 - Remove executable bit from prague-map.xml file.