@@ -2,6 +2,7 @@ Changes
 examples/ex1.pl
 examples/ex2.pl
 examples/ex3.pl
+examples/ex4.pl
 images/ex3.png
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
