@@ -1,4 +1,5 @@
 0.12
+ - Add example for print of metro lines to doc.
  - Update Module::Install to 1.16 version.
 
 0.11 2015-04-06T23:22:54+02:00
